fixed issue with login/register from on mobiles

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -6550,10 +6550,7 @@ nav {
   margin-top: 10px; }
 
 .register {
-  margin: 50px;
-  border: 1px #adadad solid;
-  padding: 20px;
-  border-radius: 20px; }
+  margin-top: 50px; }
 
 .admin-buttons {
   margin: 20px 10px; }
