--- a/scss/_treatments.scss
+++ b/scss/_treatments.scss
@@ -3,8 +3,8 @@
 }
 
 .register{
-	margin: 50px;
-	border: 1px #adadad solid;
-	padding: 20px;
-	border-radius: 20px;
+	margin-top: 50px;
+	// border: 1px #adadad solid;
+	// padding: 20px;
+	// border-radius: 20px;
 }
